WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273912
REGRESSION (
277837@main
): [UnfiedPDF] Flicker of low-resolution content when toggling a checkbox
https://bugs.webkit.org/show_bug.cgi?id=273912
Summary
REGRESSION (277837@main): [UnfiedPDF] Flicker of low-resolution content when ...
Simon Fraser (smfr)
Reported
2024-05-08 16:39:51 PDT
Toggle a checkbox in the 1040 PDF form, and you'll see a flicker of low-resolution content.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-08 16:40:06 PDT
<
rdar://problem/127773717
>
Simon Fraser (smfr)
Comment 2
2024-05-08 16:46:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28312
EWS
Comment 3
2024-05-08 18:48:55 PDT
Committed
278544@main
(5ab3ad6fd099): <
https://commits.webkit.org/278544@main
> Reviewed commits have been landed. Closing PR #28312 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug