[UnfiedPDF] Flicker of low-resolution content when toggling a checkbox https://bugs.webkit.org/show_bug.cgi?id=273912 rdar://127773717

Reviewed by Abrar Rahman Protyasha.

The fine-grained tile invalidation added in 277837@main adds a check on the "contentVersion",
which increments whenever an annotation, like a checkbox, changes state. This caused us to
throw away rendered tiles in `AsyncPDFRenderer::willRepaintTile()`, which resulted in a flash
of the blurry page background until we got the new tile.

It's OK to paint tiles with a stale contentVersion; we'll paint the new state once we've got
a rendered tile with the new content.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.h:
(WebKit::AsyncPDFRenderer::TileRenderInfo::equivalentForPaintingIgnoringContentVersion const):
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.mm:
(WebKit::AsyncPDFRenderer::renderInfoIsValidForTile const):
(WebKit::AsyncPDFRenderer::willRepaintTile):
(WebKit::AsyncPDFRenderer::didCompleteTileRender):

Canonical link: https://commits.webkit.org/278544@main