Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.mm
@@ -149,7 +149,7 @@ RefPtr<WebCore::ImageBuffer> AsyncPDFRenderer::previewImageForPage(PDFDocumentLa
     return m_pagePreviews.get(pageIndex);
 }
 
-bool AsyncPDFRenderer::renderInfoIsValidForTile(const TileForGrid& tileInfo, const TileRenderInfo& renderInfo) const
+bool AsyncPDFRenderer::renderInfoIsValidForTile(const TileForGrid& tileInfo, const TileRenderInfo& renderInfo, CheckContentVersion checkContentVersion) const
 {
     ASSERT(isMainRunLoop());
     if (!m_pdfContentsLayer)
@@ -161,7 +161,11 @@ bool AsyncPDFRenderer::renderInfoIsValidForTile(const TileForGrid& tileInfo, con
 
     auto currentTileRect = tiledBacking->rectForTile(tileInfo.tileIndex);
     auto currentRenderInfo = renderInfoForTile(tileInfo, currentTileRect);
-    return renderInfo.equivalentForPainting(currentRenderInfo);
+
+    if (checkContentVersion == CheckContentVersion::Yes)
+        return renderInfo.equivalentForPainting(currentRenderInfo);
+
+    return renderInfo.equivalentForPaintingIgnoringContentVersion(currentRenderInfo);
 }
 
 void AsyncPDFRenderer::willRepaintTile(TileGridIndex gridIndex, TileIndex tileIndex, const FloatRect& tileRect, const FloatRect& tileDirtyRect)
@@ -177,7 +181,8 @@ void AsyncPDFRenderer::willRepaintTile(TileGridIndex gridIndex, TileIndex tileIn
         if (renderInfo.tileRect != tileRect)
             return false;
 
-        return renderInfoIsValidForTile(tileInfo, renderInfo);
+        // It's OK to paint tiles with a stale content version (e.g. old state of a checkbox). We'll paint the new tile whne we get it.
+        return renderInfoIsValidForTile(tileInfo, renderInfo, CheckContentVersion::No);
     };
 
     LOG_WITH_STREAM(PDFAsyncRendering, stream << "AsyncPDFRenderer::willRepaintTile " << tileInfo << " rect " << tileRect << " (dirty rect " << tileDirtyRect << ") - already queued "
@@ -520,7 +525,7 @@ void AsyncPDFRenderer::didCompleteTileRender(RefPtr<WebCore::ImageBuffer>&& imag
     if (!imageBuffer)
         return;
 
-    // Tiling may have changed since we started the tile paint; check that it's still valid.
+    // State may have changed since we started the tile paint; check that it's still valid.
     if (!renderInfoIsValidForTile(tileInfo, renderInfo))
         return;
 
